added header in chart app

--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
     <link rel="stylesheet" href="./sass/main.css" />
     <title>Expenses chart</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <header class="container__header">
+        <div class="container__header__balance">
+          <span class="container__header__balance-text">My balance</span>
+          <span class="container__header__balance-sum">$921.48</span>
+        </div>
+        <div class="container__header-circles"></div>
+      </header>
+    </div>
+  </body>
 </html>
