ending project with html and scss

--- a/index.html
+++ b/index.html
@@ -21,6 +21,65 @@
         </div>
         <div class="container__header-circles"></div>
       </header>
+      <main class="container__main">
+        <h2 class="container__main-header">Spending - Last 7 days</h2>
+        <div class="container__main-chart">
+          <div class="container__main-chart__box">
+            <div
+              class="container__main-chart__box-item container__main-chart__box-item1"
+            ></div>
+            <span class="container__main-chart__box-text">mon</span>
+          </div>
+          <div class="container__main-chart__box">
+            <div
+              class="container__main-chart__box-item container__main-chart__box-item2"
+            ></div>
+            <span class="container__main-chart__box-text">tue</span>
+          </div>
+          <div class="container__main-chart__box">
+            <div
+              class="container__main-chart__box-item container__main-chart__box-item--aqua"
+            ></div>
+            <span class="container__main-chart__box-text">wed</span>
+          </div>
+          <div class="container__main-chart__box">
+            <div
+              class="container__main-chart__box-item container__main-chart__box-item4"
+            ></div>
+            <span class="container__main-chart__box-text">thu</span>
+          </div>
+          <div class="container__main-chart__box">
+            <div
+              class="container__main-chart__box-item container__main-chart__box-item5"
+            ></div>
+            <span class="container__main-chart__box-text">fri</span>
+          </div>
+          <div class="container__main-chart__box">
+            <div
+              class="container__main-chart__box-item container__main-chart__box-item6"
+            ></div>
+            <span class="container__main-chart__box-text">sat</span>
+          </div>
+          <div class="container__main-chart__box">
+            <div
+              class="container__main-chart__box-item container__main-chart__box-item7"
+            ></div>
+            <span class="container__main-chart__box-text">sun</span>
+          </div>
+        </div>
+        <div class="container__main__total">
+          <div class="container__main__total-box">
+            <span class="container__main__total-box__text"
+              >Total this month</span
+            >
+            <span class="container__main__total-box__sum">$478.33</span>
+          </div>
+          <div class="container__main__total-box2">
+            <span class="container__main__total-rate">+2.4%</span>
+            <span class="container__main__total-month">from last month</span>
+          </div>
+        </div>
+      </main>
     </div>
   </body>
 </html>
